--- a/package.json
+++ b/package.json
@@ -16,6 +16,8 @@
     "mysql": "^2.18.1",
     "react-bootstrap": "^1.5.2",
     "react-bootstrap-dropdown-menu": "^1.1.23",
-    "react-dom": "^17.0.2"
+    "react-dom": "^17.0.2",
+    "react-redux": "^7.2.3",
+    "redux": "^4.0.5"
   }
 }
