--- a/package.json
+++ b/package.json
@@ -2,10 +2,12 @@
   "name": "GardenerVKRB",
   "version": "1.0.0",
   "devDependencies": {
+    "add": "^2.0.6",
     "axios": "^0.21.1",
     "cookie-parser": "^1.4.5",
     "cors": "^2.8.5",
     "express-session": "^1.17.1",
+    "node-sass": "^5.0.0",
     "react": "^17.0.2",
     "react-router-dom": "^5.2.0"
   },
