--- a/client/package.json
+++ b/client/package.json
@@ -8,6 +8,7 @@
     "@testing-library/user-event": "^7.1.2",
     "axios": "^0.20.0",
     "bootstrap": "^4.6.0",
+    "moment": "^2.29.1",
     "node-sass": "^5.0.0",
     "react": "^16.13.1",
     "react-bootstrap": "^1.5.2",
