--- a/client/package.json
+++ b/client/package.json
@@ -40,5 +40,8 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "nest-object-deep-copy": "^1.0.13"
   }
 }
